--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
+    <style>
+      #unity-canvas {
+        width: 100vw;
+        height: 100vh;
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <div id="unity-container">
@@ -20,6 +27,11 @@
       <div id="unity-warning"> </div>
     </div>
     <script>
+      window.addEventListener('resize', function() {
+        var canvas = document.getElementById('unity-canvas');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+      });
       window.addEventListener("load", function () {
         if ("serviceWorker" in navigator) {
           navigator.serviceWorker.register("ServiceWorker.js");
